@@ -29,6 +29,9 @@
 	- upgrade to zlib-1.2.2.4 internal.
 	- macosx: avoid minigzip build failures.
 	- upgrade to file-4.14 internal.
+	- fix: magic_file() closes stdin when given directory path.
+	- use perldeps.pl, phase out perl.{req,prov} (again).
+	- document __vsflags (#147489).
 
 4.4 -> 4.4.1:
 	- force *.py->*.pyo byte code compilation with brp-python-bytecompile.
